[gepardec/mega#727] Refactoring additional data structures and optionals